# roadplugin

./: README.md  pyproject.toml
src/roadplugin/: __init__.py  cli.py  plugin.py
tests/: __init__.py  test_plugin.py
