[project]
name = "roadplugin"
version = "0.1.0"
description = "Plugin system for BlackRoad OS - Extensible architecture for building modular applications"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "BlackRoad OS", email = "blackroad.systems@gmail.com"}
]
keywords = ["plugins", "hooks", "extensibility", "blackroad", "modular"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
cli = [
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.scripts]
roadplugin = "roadplugin.cli:main"

[project.urls]
Homepage = "https://github.com/BlackRoad-OS/roadplugin"
Documentation = "https://github.com/BlackRoad-OS/roadplugin#readme"
Repository = "https://github.com/BlackRoad-OS/roadplugin.git"
Issues = "https://github.com/BlackRoad-OS/roadplugin/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/roadplugin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
